@@ -1,5 +1,10 @@
 2002-06-28  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c (nautilus_icon_canvas_item_bounds):
+	Fix bounds so we don't leave trails from the selected text rect.
+
+2002-06-28  Alexander Larsson  <alexl@redhat.com>
+
 	* icons/gnome/throbber/Makefile.am: 
 	* icons/gnome/throbber/001-006.png: 
 	* icons/gnome/gnome.xml:
